layout & routing change

--- a/src/app/layout/sidebar/sidebar.component.scss
+++ b/src/app/layout/sidebar/sidebar.component.scss
@@ -2,13 +2,12 @@
 .side-nav-content{
     color: white;
     width: 230px;
-    background-color:#3f51b5;
+    background-color:#5252e6;
     height: 100%;
     width: 230px;
     display: block;
     box-shadow: 0 0 45px 0 rgb(0, 0, 0,6);
     border-top: 1px solid white;
-
 }
 
 .logo {
