--- a/src/app/layout/sidebar/sidebar.component.html
+++ b/src/app/layout/sidebar/sidebar.component.html
@@ -4,16 +4,17 @@
     <mat-list-item role="listitem">Item 3</mat-list-item>
   </mat-list> -->
   
+
 <div class="side-nav-content ">
     <div class="logo">
-        <a href="/" class="logo- mini">
-          <img src="assets/images/logo.png" alt="logo of company" />
+        <a href="/" class="logo-mini">
+          <img src="assets/images/logo2.png" alt="logo of company" />
         </a>
       </div>
-  <hr style="border-bottom: 1 px solid white; width: 90%; margin-left: 8px" />
+  <hr style="border-bottom: 1px solid white; width: 95%; margin-left: 8px" />
     <ul class="nav-list ">
         <li class="nav-list-item 
-        " *ngFor="let item of list "
+        "*ngFor="let item of list"
         routerLink="{{ item.routeLink }}"
         >
             <i class="{{item.icon}} "></i> 
