some dashboard and layout css change

--- a/src/app/admin/employees/employees.component.html
+++ b/src/app/admin/employees/employees.component.html
@@ -1,1 +1,16 @@
-<p>employees works!</p>
+ <!-- <div class="flex-auto">
+  <div class="flex flex-col"> -->
+    <div class="flex flex-col bg-white-500">
+      <div class="flex flex-row">
+        <h3 class="font-bold text-gray-500 p-2">Employees Detail </h3>
+      </div> 
+      <!--p tag -->
+     </div>
+    <div class="min-h-screen bg-blue-50">
+        
+      
+
+    </div>
+  <!-- </div>
+</div>  -->
+
