--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -1,5 +1,5 @@
-<mat-toolbar class="w-full" color="primary">
-  <mat-toolbar-row>
+<mat-toolbar class="w-full text-blue-600" >
+  <mat-toolbar-row class="">
     <button mat-icon-button class="">
       <mat-icon>menu</mat-icon>
     </button>
@@ -20,9 +20,17 @@
         <a mat-menu-item>Female <span>5</span></a>
       </mat-menu>
 
-      <div class="float-right flex">
-        <a mat-button> Create Contact </a>
-        <a mat-button> Admin & HR </a>
+      <div class="float-right flex ">
+        <a class="mx-5" mat-button> Create Contact </a>
+        <!-- <a mat-button> Admin & HR </a> -->
+        <!-- <img
+          src="https://mdbcdn.b-cdn.net/img/new/avatars/2.webp"
+          class="rounded-full w-10 mr-5 "
+          alt="Avatar"
+        /> -->
+        
+          
+
       </div>
     </div>
   </mat-toolbar-row>
