--- a/src/app/layout/sidebar/sidebar.component.html
+++ b/src/app/layout/sidebar/sidebar.component.html
@@ -1,8 +1,4 @@
-<!-- <mat-list role="list" class="sidebar">
-    <mat-list-item role="listitem"><a href="dashboard">Dashboard</a></mat-list-item>
-    <mat-list-item role="listitem"><a href="">Employee</a></mat-list-item>
-    <mat-list-item role="listitem">Item 3</mat-list-item>
-  </mat-list> -->
+
   
 
 <div class="side-nav-content ">
@@ -12,7 +8,7 @@
         </a>
       </div>
   <hr style="border-bottom: 1px solid white; width: 95%; margin-left: 8px" />
-    <ul class="nav-list ">
+    <ul class="nav-list cursor-pointer">
         <li class="nav-list-item 
         "*ngFor="let item of list"
         routerLink="{{ item.routeLink }}"
