--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,4 +1,4 @@
- <div class="container" style="margin-top:150px ">
+ <!-- <div class="container " style="margin-top:150px ">
   <div class="row justify-content-md-center">
     <div class="col-md-5 border p-3 shadow">
       <img class="icon" style="margin:15px auto" src="assets/images/logo2.png" alt="" width="100px">        
@@ -37,5 +37,111 @@
       </form>
     </div>
   </div>
-</div> 
+</div>  -->
+
+
+<!-- <div class="container my-72">
+<mat-card class="my-card w-90 mx-auto">
+   <mat-card-content class="rounded-full">
+      <form class="my-form">
+        <div class="columns-2"></div>
+         <mat-form-field >
+            <mat-label>Email</mat-label>
+            <input  matInput class="form-control"  mat-placeholder="Email" name="email" >
+         </mat-form-field>
+         <mat-form-field >
+            <mat-label>Password</mat-label>
+            <input  matInput  mat-placeholder="Password" class="form-control" name="password">
+         </mat-form-field>
+      </form>
+   </mat-card-content>
+   <mat-card-actions>
+      <button mat-raised-button class="bg-purple-800 text-white p-3 py-2">LOGIN</button>
+   </mat-card-actions>
+</mat-card>  
+</div> -->
+<!-- <div class="min-h-screen bg-blue-50"> -->
+          <div class="min-h-screen"
+              style="
+                background: linear-gradient(to right, #ee7724, #d8363a, #dd3675, #b44593);
+              "
+            >
+             
+<section class="h-full gradient-form bg-gray-200 md:h-screen">
+  <div class="py-12 px-6 h-full">
+    <div class="flex justify-center items-center flex-wrap h-full g-6 text-gray-800">
+      <!-- <div class="xl:w-10/12"> -->
+        <div class="block bg-white shadow-lg rounded-lg">
+          <div class="lg:flex lg:flex-wrap g-0">
+            <!-- <div class="lg:w-6/12 px-4 md:px-0"> -->
+              <div class="md:p-12 md:mx-6">
+                <div class="text-center">
+                  <img
+                    class="mx-auto w-20 my-5 "
+                    src="assets/images/logo2.png"
+                    alt="logo"
+                  />
+                  <!-- <h4 class="text-xl font-semibold mt-1 mb-12 pb-1">We are The Lotus Team</h4> -->
+                </div>
+                <form>
+                  <!-- <p class="mb-4">Please login to your account</p> -->
+                  <div class="mb-4">
+                    <input
+                      type="text"
+                      class="form-control block w-full px-3 py-1.5 text-base font-normal text-gray-700 bg-white bg-clip-padding border border-solid border-gray-300 rounded transition ease-in-out m-0 focus:text-gray-700 focus:bg-white focus:border-blue-600 focus:outline-none"
+                      id="exampleFormControlInput1"
+                      placeholder="Username"
+                    />
+                  </div>
+                  <div class="mb-4">
+                    <input
+                      type="password"
+                      class="form-control block w-full px-3 py-1.5 text-base font-normal text-gray-700 bg-white bg-clip-padding border border-solid border-gray-300 rounded transition ease-in-out m-0 focus:text-gray-700 focus:bg-white focus:border-blue-600 focus:outline-none"
+                      id="exampleFormControlInput1"
+                      placeholder="Password"
+                    />
+                  </div>
+                  <div class="text-center pt-1 mb-12 pb-1">
+                    <button
+                      class="inline-block px-6 py-2.5 text-white font-medium text-xs leading-tight uppercase rounded shadow-md hover:bg-blue-700 hover:shadow-lg focus:shadow-lg focus:outline-none focus:ring-0 active:shadow-lg transition duration-150 ease-in-out w-full mb-3"
+                      type="button"
+                      data-mdb-ripple="true"
+                      data-mdb-ripple-color="light"
+                      style="
+                        background: linear-gradient(
+                          to right,
+                          #ee7724,
+                          #d8363a,
+                          #dd3675,
+                          #b44593
+                        );
+                      "
+                    >
+                      Log in
+                    </button>
+                    <a class="text-gray-500" href="#!">Forgot password?</a>
+                  </div>
+                  <!-- <div class="flex items-center justify-between pb-6">
+                    <p class="mb-0 mr-2 ml-2">Don't have an account?</p>
+                    <button
+                      type="button"
+                      class="inline-block px-6 py-2 border-2 border-red-600 text-red-600 font-medium text-xs leading-tight uppercase rounded hover:bg-black hover:bg-opacity-5 focus:outline-none focus:ring-0 transition duration-150 ease-in-out"
+                      data-mdb-ripple="true"
+                      data-mdb-ripple-color="light"
+                    >
+                      Danger
+                    </button>
+                  </div> -->
+                </form>
+              </div>
+            </div>
+            
+          </div>
+        </div>
+      </div>
+    <!-- </div>
+  </div> -->
+</section>
+</div>
+
 
