--- a/src/app/layout/header/header.component.scss
+++ b/src/app/layout/header/header.component.scss
@@ -1,7 +1,7 @@
-.space{
-    width:100%; 
-    margin-left: 25px;
-}
+// .space{
+//     width:100%; 
+//     margin-left: 25px;
+// }
 // .flex{
 //     display: flex;
 //     // align-items: center;
