--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -1,11 +1,11 @@
 <mat-toolbar class="w-full" color="primary">
   <mat-toolbar-row>
-    <button mat-icon-button class="">
+    <button mat-icon-button class="" (click)="toggleMenu()">
       <mat-icon>menu</mat-icon>
     </button>
    
     <div class="space">     
-      <a mat-button> Total </a>
+      <!-- <a mat-button> Total </a>
       <a
         mat-button
         [matMenuTriggerFor]="menu"
@@ -18,12 +18,19 @@
       <mat-menu #menu="matMenu">
         <a mat-menu-item>Male 8</a>
         <a mat-menu-item>Female <span>5</span></a>
-      </mat-menu>
+      </mat-menu> -->
 
       <div class="float-right flex">
         <a mat-button> Create Contact </a>
-        <a mat-button> Admin & HR </a>
+        <a mat-button  > Admin & HR </a>
+        <a mat-button [matMenuTriggerFor]="profileMenu" > <img src="assets/images/profile.jpg" class="profile-pic" alt="profile"> </a>
       </div>
     </div>
   </mat-toolbar-row>
 </mat-toolbar>
+<mat-menu #profileMenu>
+  <menu mat-menu-item>    <mat-icon>
+    manage_accounts</mat-icon> Profile</menu>
+  <menu mat-menu-item>   <mat-icon>logout</mat-icon> Logout</menu>
+
+</mat-menu>
