employee data-form

--- a/src/app/admin/dashboard/dashboard.component.html
+++ b/src/app/admin/dashboard/dashboard.component.html
@@ -12,7 +12,7 @@
     <div class="min-h-screen bg-gray-100">
       <div class="mt-8 grid gap-10 lg:grid-cols-4 sm:grid-cols-2 p-4">
         <!-- gid starts from here -->
-        <div class="flex item-center bg-white rounded shadow justify-between p-3 mx-3 overflow-hidden">
+        <div class="flex item-center bg-white rounded shadow-xl justify-between p-3 mx-3 overflow-hidden">
             <div>
                 <div class="text-sm lg:text-3xl text-gray-500">Total Employees</div>
                 <div class="text-3xl font-medium text-grey-600 my-2">3445</div>
@@ -29,9 +29,9 @@
            </svg>                     
         </div>
         <!-- gid starts from here -->
-        <div class="flex item-center bg-white rounded shadow justify-between p-3 mx-3 overflow-hidden">
+        <div class="flex item-center bg-white rounded shadow-xl justify-between p-3 mx-3 overflow-hidden">
             <div>
-                <div class="text-sm lg:text-3xl text-gray-500"> </div>
+                <div class="text-sm lg:text-3xl text-gray-500">Average income </div>
                 <div class="text-3xl font-medium text-grey-600 my-2">3445</div>
             </div>            
              <svg
@@ -47,7 +47,7 @@
         </div>
 
         <!-- gid starts from here -->
-        <div class="flex item-center  bg-white rounded shadow justify-between p-3 mx-3">
+        <div class="flex item-center  bg-white rounded shadow-xl justify-between p-3 mx-3">
             <div>
                 <div class="text-sm lg:text-3xl text-gray-500">Total income</div>
                 <div class="text-3xl font-medium text-grey-600 my-2">3445</div>
@@ -65,9 +65,9 @@
         </div>
 
         <!-- gid starts from here -->
-        <div class="flex item-center  bg-white rounded shadow justify-between p-3 mx-3">
+        <div class="flex item-center  bg-white rounded shadow-xl justify-between p-3 mx-3">
             <div>
-                <div class="text-sm lg:text-3xl text-gray-500">Total Employees</div>
+                <div class="text-sm lg:text-3xl text-gray-500">Average income</div>
                 <div class="text-3xl font-medium text-grey-600 my-2">3445</div>
             </div>            
              <svg
