--- a/src/app/admin/employees/employees.component.html
+++ b/src/app/admin/employees/employees.component.html
@@ -1,33 +1,16 @@
- <!-- <div class="flex-auto">
-  <div class="flex flex-col"> -->
-    <div class="flex flex-col bg-white-500">
-      <div class="flex flex-row">
-        <h3 class="font-bold text-gray-500 p-2">Employees Detail </h3>
-      </div> 
-      <!--p tag -->
-     </div>
-    <div class="min-h-screen bg-blue-50">
-        
-      
-
-    </div>
-  <!-- </div>
-</div>  -->
-
 <div class="flex-auto">
-  <div class="flex flex-col"> 
+  <div class="flex flex-col">
+
     <div class="flex flex-col bg-white-500">
-      <div class="flex flex-row">
-        <h3 class="font-bold text-gray-500 p-2">Employees Detail </h3>
-      </div> 
+      <div class="fle flex-row">
+        <h3 class="font-bold text-gray-500 p-2">Employee Data Form</h3>
+      </div>
       <!--p tag -->
-     </div>
-    <div class="min-h-screen bg-gray-100 ">
+    </div>
 
-    
-      
-
+    <!-- card design -->
+    <div class="min-h-screen bg-gray-100">
+     
     </div>
   </div>
-</div> 
-
+</div>
