--- a/src/app/admin/dashboard/dashboard.component.html
+++ b/src/app/admin/dashboard/dashboard.component.html
@@ -1,6 +1,5 @@
 <div class="flex-auto">
   <div class="flex flex-col">
-
     <div class="flex flex-col bg-white-500">
       <div class="fle flex-row">
         <h3 class="font-bold text-gray-500 p-2">Dashboard</h3>
@@ -9,80 +8,37 @@
     </div>
 
     <!-- card design -->
-    <div class="min-h-screen bg-gray-100">
-      <div class="mt-8 grid gap-10 lg:grid-cols-4 sm:grid-cols-2 p-4">
-        <!-- gid starts from here -->
-        <div class="flex item-center bg-white rounded shadow justify-between p-3 mx-3 overflow-hidden">
-            <div>
-                <div class="text-sm lg:text-3xl text-gray-500">Total Employees</div>
-                <div class="text-3xl font-medium text-grey-600 my-2">3445</div>
-            </div>            
-             <svg
-             class="w-20 h-10 md:w-18 md:h-18 lg:w-25 lg:h-25 text-gray-600 "
-             fill="currentColor"
-             xmlns="http://www.w3.org/2000/svg"
-             viewBox="0 0 640 512"
-           >
-             <path
-               d="M96 224c35.3 0 64-28.7 64-64s-28.7-64-64-64-64 28.7-64 64 28.7 64 64 64zm448 0c35.3 0 64-28.7 64-64s-28.7-64-64-64-64 28.7-64 64 28.7 64 64 64zm32 32h-64c-17.6 0-33.5 7.1-45.1 18.6 40.3 22.1 68.9 62 75.1 109.4h66c17.7 0 32-14.3 32-32v-32c0-35.3-28.7-64-64-64zm-256 0c61.9 0 112-50.1 112-112S381.9 32 320 32 208 82.1 208 144s50.1 112 112 112zm76.8 32h-8.3c-20.8 10-43.9 16-68.5 16s-47.6-6-68.5-16h-8.3C179.6 288 128 339.6 128 403.2V432c0 26.5 21.5 48 48 48h288c26.5 0 48-21.5 48-48v-28.8c0-63.6-51.6-115.2-115.2-115.2zm-223.7-13.4C161.5 263.1 145.6 256 128 256H64c-35.3 0-64 28.7-64 64v32c0 17.7 14.3 32 32 32h65.9c6.3-47.4 34.9-87.3 75.2-109.4z"
-             ></path>
-           </svg>                     
-        </div>
-        <!-- gid starts from here -->
-        <div class="flex item-center bg-white rounded shadow justify-between p-3 mx-3 overflow-hidden">
-            <div>
-                <div class="text-sm lg:text-3xl text-gray-500"> </div>
-                <div class="text-3xl font-medium text-grey-600 my-2">3445</div>
-            </div>            
-             <svg
-             class="w-20 h-10 md:w-18 md:h-18 lg:w-25 lg:h-25 text-gray-600 "
-             fill="currentColor"
-             xmlns="http://www.w3.org/2000/svg"
-             viewBox="0 0 640 512"
-           >
-             <path
-               d="M96 224c35.3 0 64-28.7 64-64s-28.7-64-64-64-64 28.7-64 64 28.7 64 64 64zm448 0c35.3 0 64-28.7 64-64s-28.7-64-64-64-64 28.7-64 64 28.7 64 64 64zm32 32h-64c-17.6 0-33.5 7.1-45.1 18.6 40.3 22.1 68.9 62 75.1 109.4h66c17.7 0 32-14.3 32-32v-32c0-35.3-28.7-64-64-64zm-256 0c61.9 0 112-50.1 112-112S381.9 32 320 32 208 82.1 208 144s50.1 112 112 112zm76.8 32h-8.3c-20.8 10-43.9 16-68.5 16s-47.6-6-68.5-16h-8.3C179.6 288 128 339.6 128 403.2V432c0 26.5 21.5 48 48 48h288c26.5 0 48-21.5 48-48v-28.8c0-63.6-51.6-115.2-115.2-115.2zm-223.7-13.4C161.5 263.1 145.6 256 128 256H64c-35.3 0-64 28.7-64 64v32c0 17.7 14.3 32 32 32h65.9c6.3-47.4 34.9-87.3 75.2-109.4z"
-             ></path>
-           </svg>                     
-        </div>
+     <div class="min-h-screen bg-gray-100">
+      <!-- <div *ngFor="let dd of cardData">dsgdfh</div>
 
-        <!-- gid starts from here -->
-        <div class="flex item-center  bg-white rounded shadow justify-between p-3 mx-3">
-            <div>
-                <div class="text-sm lg:text-3xl text-gray-500">Total income</div>
-                <div class="text-3xl font-medium text-grey-600 my-2">3445</div>
-            </div>            
-             <svg
-             class="w-20 h-10 md:w-18 md:h-18 lg:w-25 lg:h-25 text-gray-600 p"
-             fill="currentColor"
-             xmlns="http://www.w3.org/2000/svg"
-             viewBox="0 0 640 512"
-           >
-             <path
-               d="M96 224c35.3 0 64-28.7 64-64s-28.7-64-64-64-64 28.7-64 64 28.7 64 64 64zm448 0c35.3 0 64-28.7 64-64s-28.7-64-64-64-64 28.7-64 64 28.7 64 64 64zm32 32h-64c-17.6 0-33.5 7.1-45.1 18.6 40.3 22.1 68.9 62 75.1 109.4h66c17.7 0 32-14.3 32-32v-32c0-35.3-28.7-64-64-64zm-256 0c61.9 0 112-50.1 112-112S381.9 32 320 32 208 82.1 208 144s50.1 112 112 112zm76.8 32h-8.3c-20.8 10-43.9 16-68.5 16s-47.6-6-68.5-16h-8.3C179.6 288 128 339.6 128 403.2V432c0 26.5 21.5 48 48 48h288c26.5 0 48-21.5 48-48v-28.8c0-63.6-51.6-115.2-115.2-115.2zm-223.7-13.4C161.5 263.1 145.6 256 128 256H64c-35.3 0-64 28.7-64 64v32c0 17.7 14.3 32 32 32h65.9c6.3-47.4 34.9-87.3 75.2-109.4z"
-             ></path>
-           </svg>                     
+      <div
+        *ngFor="let card of cardData"
+        class="flex flex-wrap justify-between max-w-xs card-custom ml-4 mr-4 mb-4 mt-4"
+      >
+        {{ card.icon }} 
+        {{ card.label }}
+        <div>
+          <i class="material-icons">{{ card.icon }}</i>
         </div>
+        <div class="text-center">
+          <div class="text-sm font-extrabold">{{ card.count }}</div>
+          <div class="text-xs">{{ card.label }}</div>
+         </div> -->
 
-        <!-- gid starts from here -->
-        <div class="flex item-center  bg-white rounded shadow justify-between p-3 mx-3">
-            <div>
-                <div class="text-sm lg:text-3xl text-gray-500">Total Employees</div>
-                <div class="text-3xl font-medium text-grey-600 my-2">3445</div>
-            </div>            
-             <svg
-             class="w-20 h-10 md:w-18 md:h-18 lg:w-25 lg:h-25 text-gray-600 "
-             fill="currentColor"
-             xmlns="http://www.w3.org/2000/svg"
-             viewBox="0 0 640 512"
-           >
-             <path
-               d="M96 224c35.3 0 64-28.7 64-64s-28.7-64-64-64-64 28.7-64 64 28.7 64 64 64zm448 0c35.3 0 64-28.7 64-64s-28.7-64-64-64-64 28.7-64 64 28.7 64 64 64zm32 32h-64c-17.6 0-33.5 7.1-45.1 18.6 40.3 22.1 68.9 62 75.1 109.4h66c17.7 0 32-14.3 32-32v-32c0-35.3-28.7-64-64-64zm-256 0c61.9 0 112-50.1 112-112S381.9 32 320 32 208 82.1 208 144s50.1 112 112 112zm76.8 32h-8.3c-20.8 10-43.9 16-68.5 16s-47.6-6-68.5-16h-8.3C179.6 288 128 339.6 128 403.2V432c0 26.5 21.5 48 48 48h288c26.5 0 48-21.5 48-48v-28.8c0-63.6-51.6-115.2-115.2-115.2zm-223.7-13.4C161.5 263.1 145.6 256 128 256H64c-35.3 0-64 28.7-64 64v32c0 17.7 14.3 32 32 32h65.9c6.3-47.4 34.9-87.3 75.2-109.4z"
-             ></path>
-           </svg>                     
+          <!-- <div *ngFor="let dd of cardData">dsgdfh</div> -->
+
+      <div
+        class="flex flex-wrap justify-between max-w-xs card-custom border ml-4 mr-4 mb-4 mt-4"
+      >
+        
+        <div class="bg-blue-300 text-blue-700 rounded flex justify-center p-3 ">
+          <i class="material-icons">delete</i>
         </div>
-
+        <div class="text-center">
+          <div class="text-sm font-extrabold">2200 </div>
+          <div class="text-xs">Total Employees</div>
+         </div>
       </div>
-    </div>
+    </div> 
   </div>
 </div>
