--- a/src/app/admin/employees-list/employees-list.component.html
+++ b/src/app/admin/employees-list/employees-list.component.html
@@ -1,1 +1,19 @@
-<p>employees-list works!</p>
+<div class="flex-auto">
+  <div class="flex flex-col">
+    <div class="flex flex-col bg-white-500">
+      <div class="flex flex-row">
+        <h3 class="font-bold text-gray-500 p-2">Employee Data Form</h3>
+      </div>
+      <!--p tag -->
+    </div>
+
+    <!-- card design -->
+    <div class="min-h-screen bg-gray-100">
+      
+      <!-- <app-tabledata></app-tabledata> -->
+      <!-- <div *ngFor="let list of lists">
+        cons
+      
+    </div> -->
+  </div>
+</div>
