--- a/src/app/layout/header/header.component.scss
+++ b/src/app/layout/header/header.component.scss
@@ -2,10 +2,10 @@
 //     width:100%; 
 //     margin-left: 25px;
 // }
-// .flex{
-//     display: flex;
-//     // align-items: center;
-// }
+.flex{
+    // display: flex;
+    align-items: end;
+}
 
 
 .profile-pic{
