--- a/src/app/layout/sidebar/sidebar.component.html
+++ b/src/app/layout/sidebar/sidebar.component.html
@@ -6,8 +6,8 @@
           <img src="assets/images/logo.png" alt="logo of company"  *ngIf="expand"/> 
         </a>
     </div>
-    <img src="assets/images/logo.png" alt="logo of company"  *ngIf="!expand"/>
-  <hr style="border-bottom: 1px solid white; width: 95%; margin-left: 8px" />
+    <img  src="assets/images/xlogo.png" alt="logo of company"  *ngIf="!expand"/>
+  <!-- <hr style="border-bottom: 1px solid white; width: 95%; margin-left: 8px" /> -->
     <ul class="nav-list cursor-pointer">
         <li class="nav-list-item 
         "*ngFor="let item of list"
