--- a/src/app/admin/dashboard/dashboard.component.html
+++ b/src/app/admin/dashboard/dashboard.component.html
@@ -26,17 +26,19 @@
          </div> -->
 
           <!-- <div *ngFor="let dd of cardData">dsgdfh</div> -->
+         
+
 
       <div
-        class="flex flex-wrap justify-between max-w-xs card-custom border ml-4 mr-4 mb-4 mt-4"
+        class="flex flex-wrap justify-between max-w-xs card-custom border shadow hover:shadow-lg ml-4 mr-4 mb-4 mt-4"
       >
         
-        <div class="bg-blue-300 text-blue-700 rounded flex justify-center p-3 ">
+        <div class="bg-blue-300 text-blue-700 rounded-3xl flex justify-center p-3 ">
           <i class="material-icons">delete</i>
         </div>
         <div class="text-center">
-          <div class="text-sm font-extrabold">2200 </div>
-          <div class="text-xs">Total Employees</div>
+          <div class="text-sm font-extrabold ">2200 </div>
+          <div class="text-xs font-bold ">Total Employees</div>
          </div>
       </div>
     </div> 
