--- a/src/app/admin/employees/employees.component.html
+++ b/src/app/admin/employees/employees.component.html
@@ -2,7 +2,7 @@
   <div class="flex flex-col">
 
     <div class="flex flex-col bg-white-500">
-      <div class="fle flex-row">
+      <div class="flex flex-row">
         <h3 class="font-bold text-gray-500 p-2">Employee Data Form</h3>
       </div>
       <!--p tag -->
@@ -29,8 +29,9 @@
               <mat-label>Employee Name</mat-label>
               <input matInput placeholder="Username">
             </mat-form-field>
-          <!-- </div> -->
+          </div>
     
+          <div class="grid  lg:grid-cols-4  gap-3 p-2">
               <mat-form-field >
                 <mat-label>Designation</mat-label>
                 <mat-select>
@@ -39,6 +40,7 @@
                   </mat-option>
                 </mat-select>
               </mat-form-field>
+
               <mat-form-field >
                 <mat-label>Department</mat-label>
                 <mat-select>
@@ -57,23 +59,56 @@
                 </mat-select>
               </mat-form-field>
 
+              <mat-form-field >
+                <mat-label>qualification </mat-label>
+                <mat-select  >
+                  <mat-option *ngFor="let quali of qualification " [value]="quali.value" >
+                    {{quali.viewValue}}
+                  </mat-option>
+                </mat-select>
+              </mat-form-field>
+            <!-- </div> -->
+  
+            <!-- <div class="grid  lg:grid-cols-3 gap-3 p-2"> -->
+
             <mat-form-field class="example-full-width">
               <mat-label>Date Of Joining </mat-label>
-              <input type="date" matInput placeholder="Date Of Joining">
+              <input type="date" matInput placeholder=" Employee's Date Of Joining">
             </mat-form-field>
-            <mat-form-field >
-              <mat-label>Skill</mat-label>
-              <mat-select  multiple>
-                <mat-option *ngFor="let skill of skills " [value]="skill.value" >
-                  {{skill.viewValue}}
-                </mat-option>
-              </mat-select>
+
+           
+            <mat-form-field class="example-full-width">
+              <mat-label>Grade</mat-label>
+              <input matInput placeholder="Please Enter Employee Grade">
             </mat-form-field>
+
+            <mat-form-field class="example-full-width">
+              <mat-label>Email </mat-label>
+              <input type="email" matInput placeholder="j@mail.com">
+            </mat-form-field>
+
+            <mat-form-field class="example-full-width">
+              <mat-label>Phone Number</mat-label>
+              <input type="email" matInput placeholder="Employee Mobile Number">
+            </mat-form-field>  
+            
+            <section class="example-section">
+              <label class="example-margin"></label>
+              <mat-radio-group>
+                <mat-radio-button class="example-margin" value="Married">Married</mat-radio-button>
+                <mat-radio-button class="example-margin" value="unmarried">unmarried</mat-radio-button>
+              </mat-radio-group>
+            </section>
+            
+              <mat-radio-group >
+                <label>Float label: </label>
+                <mat-radio-button value="married"> Married </mat-radio-button>
+                <mat-radio-button value="unmarried">UnMarried </mat-radio-button>
+              </mat-radio-group>
+            
             
           </div>
-          <button mat-mini-fab color="primary">
-            <mat-icon>Menu</mat-icon>
-          </button> 
+          <button mat-raised-button color="primary">Add Employee</button>
       </form> 
     </mat-card> 
     </div>
