list card design

--- a/src/app/shared/components/tabledata/tabledata.component.html
+++ b/src/app/shared/components/tabledata/tabledata.component.html
@@ -1,1 +1,37 @@
+<div class="flex flex-col">
+  <div class="flex flex-col bg-white-500">
+    <div class="flex flex-row">
+      <h3 class="font-bold text-gray-500 p-2">Employee Data Form</h3>
+    </div>
+    <!--p tag -->
+  </div>
 
+  <!-- card design -->
+  <div class="min-h-screen bg-gray-100">
+    <mat-card class="m-3">
+
+      <div class="flex justify-between">
+        <div class="flex items-center text-lg">
+          <p class="font-bold mx-3">NAME :</p>
+          <p class="text-grey-400 font-medium">Gagan</p>
+        </div>
+        <div class="flex flex-row items-center text-lg">
+          <!-- <p class="font-bold p-1">EMAIL ID:</p> -->
+          <p class="text-grey-400 font-medium mx-2">g@gmail.com</p>
+        </div>
+      </div>
+
+      <div class="flex justify-between">
+        <div class="flex items-center text-lg">
+          <p class="font-bold mx-3">S/NO :</p>
+          <p class="text-grey-400 font-medium">1</p>
+        </div>
+        <div class="flex flex-row items-center text-lg">
+          <p class="font-bold p-1"></p>
+          <p class="text-grey-400 font-medium mx-2">  xxxxxx585</p>
+        </div>
+      </div>
+
+    </mat-card>
+  </div>
+</div>
