--- a/src/app/admin/employees-list/employees-list.component.html
+++ b/src/app/admin/employees-list/employees-list.component.html
@@ -1,19 +1,14 @@
-<div class="flex-auto">
-  <div class="flex flex-col">
+<!-- <div class="flex-auto"> -->
+  <!-- <div class="flex flex-col">
     <div class="flex flex-col bg-white-500">
       <div class="flex flex-row">
         <h3 class="font-bold text-gray-500 p-2">Employee Data Form</h3>
       </div>
-      <!--p tag -->
+      
     </div>
 
-    <!-- card design -->
+     card design
     <div class="min-h-screen bg-gray-100">
-      
-      <!-- <app-tabledata></app-tabledata> -->
-      <!-- <div *ngFor="let list of lists">
-        cons
-      
-    </div> -->
-  </div>
-</div>
+    </div>
+  </div> -->
+  <app-tabledata [lists]="EmployeeList" [titles]="tableheader" ></app-tabledata>
