--- a/src/app/shared/components/tabledata/tabledata.component.html
+++ b/src/app/shared/components/tabledata/tabledata.component.html
@@ -8,27 +8,27 @@
 
   <!-- card design -->
   <div class="min-h-screen bg-gray-100">
-    <mat-card class="m-3">
+    <mat-card class="m-3 p-0">
 
-      <div class="flex justify-between">
+      <div class="flex justify-between -p-5 m-0">
         <div class="flex items-center text-lg">
-          <p class="font-bold mx-3">NAME :</p>
+          <p class="font-bold mx-2"><i class="fa-solid fa-user" ></i></p>
           <p class="text-grey-400 font-medium">Gagan</p>
         </div>
         <div class="flex flex-row items-center text-lg">
-          <!-- <p class="font-bold p-1">EMAIL ID:</p> -->
+          <p class="font-bold mx-2"> <i class="fa-solid fa-envelope"></i></p>
           <p class="text-grey-400 font-medium mx-2">g@gmail.com</p>
         </div>
       </div>
 
-      <div class="flex justify-between">
+      <div class="flex justify-between  ">
         <div class="flex items-center text-lg">
-          <p class="font-bold mx-3">S/NO :</p>
+          <p class="font-bold mx-2">S/NO :</p>
           <p class="text-grey-400 font-medium">1</p>
         </div>
         <div class="flex flex-row items-center text-lg">
-          <p class="font-bold p-1"></p>
-          <p class="text-grey-400 font-medium mx-2">  xxxxxx585</p>
+          <p class="font-bold "><i class="fa-solid fa-id-badge"></i></p>
+          <p class="text-grey-400 font-medium mx-3">  xxxxxxx585</p>
         </div>
       </div>
 
