Forgot password UI

--- a/src/app/auth/login/login.component.scss
+++ b/src/app/auth/login/login.component.scss
@@ -2,8 +2,11 @@ mat-card {
     max-width: 400px;
     margin: 2em auto;
     text-align: center;
-    background-color:#ffffff8a;
-  }
+    background-color: rgb(255 255 255 / 82%);
+}
+.logo{
+  width: 200px;
+ }
   
   mat-form-field {
     display: block;
@@ -14,7 +17,7 @@ mat-card {
   background-image: url('../../../assets/images/login-bg.png');  
     background-size: cover;
     height: 100%;
-    opacity: 0.9;
+    opacity:95%;
 
  }
 
