--- a/src/app/components/forgot-password/forgot-password.component.html
+++ b/src/app/components/forgot-password/forgot-password.component.html
@@ -1,4 +1,4 @@
-<div class="container" style="margin-top: 150px">
+<!-- <div class="container" style="margin-top: 150px">
   <div class="row justify-content-md-center">
     <div class="col-md-5">
       <div class="card ">
@@ -36,4 +36,48 @@
       </div>
     </div>
   </div>
+</div> -->
+
+<div class="bg">
+  <div style="padding:10%">
+    <mat-card>
+      <mat-card-content>
+        <div class=" logo m-auto my-2">
+          <a href="#">
+            <img src="assets/images/logo2.png" alt="logo of expertizzy">
+          </a>
+        </div> 
+        <form #PasswordForm="ngForm">
+          <mat-form-field>
+            <input matInput placeholder="Email" id="email"  name="email" pattern="^[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,4}$" [(ngModel)]="email" required>      
+
+          <div *ngIf="!email?.valid && (email?.dirty || email?.touched)">
+            Please enter valid email
+          </div>
+           </mat-form-field>
+          <div class="flex justify-between -mt-3"  *ngIf="isValidEmail">
+          <span class="text-green-500 font-medium">Code Has Been Sent Your Registered Mail </span>
+          <a href="#">Resend ?</a>
+          </div>
+          
+          <mat-form-field *ngIf="isValidEmail">
+            <mat-label>Code</mat-label>
+            <input
+              matInput
+              Pattern="[0-9]{6}"
+              required
+              maxlength="6"
+              autocomplete="off"
+            /> 
+          </mat-form-field>
+        <!-- </div> -->
+        <div mat-dialog-actions class="my-3">
+          <button mat-raised-button color="primary" (click)="canClick()" class="w-full">Submit</button>
+        </div>
+              <a class="no-underline mb-2" routerLink="../login"> Return To Login ?</a>
+        </form>
+      </mat-card-content>
+    </mat-card>
+  </div>
 </div>
+
