--- a/src/app/components/forgot-password/forgot-password.component.scss
+++ b/src/app/components/forgot-password/forgot-password.component.scss
@@ -1,3 +1,26 @@
-html,body{
-    background-color: grey;
-}
+
+.bg{
+  // background-image: url("assets/images/logo-bg.png");
+  background-image: url('../../../assets/images/login-bg.png');  
+    background-size: cover;
+    height: 100%;
+    opacity: 0.9;
+
+ }
+ .logo{
+  width: 200px;
+ }
+mat-card {
+    max-width: 400px;
+    margin: 2em auto;
+    text-align: center;
+    background-color: rgb(255 255 255 / 82%);
+
+  }
+   
+  mat-form-field {
+    display: block;
+  }
+
+
+ 
