--- a/src/app/shared/components/tabledata/tabledata.component.html
+++ b/src/app/shared/components/tabledata/tabledata.component.html
@@ -10,7 +10,7 @@
   <div class="min-h-screen bg-gray-100">
     <mat-card class="m-3 p-0">
 
-      <div class="flex justify-between -p-5 m-0">
+      <div class="flex justify-between m-0">
         <div class="flex items-center text-lg">
           <p class="font-bold mx-2"><i class="fa-solid fa-user" ></i></p>
           <p class="text-grey-400 font-medium">Gagan</p>
@@ -21,7 +21,7 @@
         </div>
       </div>
 
-      <div class="flex justify-between  ">
+      <div class="flex justify-between items-center m-0 ">
         <div class="flex items-center text-lg">
           <p class="font-bold mx-2">S/NO :</p>
           <p class="text-grey-400 font-medium">1</p>
