--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -1,19 +1,17 @@
 <div class="bg">
 <!-- <img src="assets/images/login-bg.png" alt=""> -->
 <div  style="padding-top:10%">
+  
   <mat-card>
+    <div class="logo m-auto my-2">
+      <a href="#">
+        <img src="assets/images/logo2.png" alt="logo of expertizzy">
+      </a>
+    </div>
       <mat-card-content>
-        <form #loginForm="ngForm">
-          <div class="w-25 m-auto my-2">
-            <a href="#">
-              <img src="assets/images/logo2.png" alt="logo of expertizzy">
-            </a>
-          </div>     
-          <mat-error *ngIf="!loginValid">
-            The username and password were not recognized
-          </mat-error>
+        <form #loginForm="ngForm">               
           <mat-form-field>
-            <input matInput placeholder="Username" [(ngModel)]="user.username" name="username" required>
+            <input matInput placeholder="Username" [(ngModel)]="user.email" name="username" required>
             <mat-error>
               Please provide a valid email address
             </mat-error>
@@ -24,7 +22,13 @@
               Please provide a valid password
             </mat-error>
           </mat-form-field>
-          <button mat-raised-button color="primary" [disabled]="!loginForm.form.valid" (click)="submit()">Login</button>
+          <div class="my-3"> 
+          <button mat-raised-button color="primary" [disabled]="!loginForm.form.valid" (click)="submit()" class="w-full">Login</button>
+            </div>
+            <div class="no-underline mb-3">
+          <a routerLink="../forgot-password">Forgot Password ?</a>
+            </div>
+        
         </form>
       </mat-card-content>
     </mat-card>
