--- a/src/styles.scss
+++ b/src/styles.scss
@@ -25,3 +25,13 @@ body {
     background: #ccc;
     border-radius: 10px;
 }
+
+.success{
+  background-color: rgb(86, 232, 86);
+  color:white;
+}
+.error{
+  background-color: #ee0b0b;
+  color:white;
+
+}
