--- a/src/app/components/forgot-password/forgot-password.component.html
+++ b/src/app/components/forgot-password/forgot-password.component.html
@@ -49,11 +49,7 @@
         </div> 
         <form #PasswordForm="ngForm">
           <mat-form-field>
-            <input matInput placeholder="Email" id="email"  name="email" pattern="^[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,4}$" [(ngModel)]="email" required>      
-
-          <div *ngIf="!email?.valid && (email?.dirty || email?.touched)">
-            Please enter valid email
-          </div>
+            <input matInput placeholder="Email" id="email"  name="email"  [(ngModel)]="email" required>      
            </mat-form-field>
           <div class="flex justify-between -mt-3"  *ngIf="isValidEmail">
           <span class="text-green-500 font-medium">Code Has Been Sent Your Registered Mail </span>
@@ -70,9 +66,9 @@
               autocomplete="off"
             /> 
           </mat-form-field>
-        <!-- </div> -->
+        
         <div mat-dialog-actions class="my-3">
-          <button mat-raised-button color="primary" (click)="canClick()" class="w-full">Submit</button>
+          <button mat-raised-button color="primary" [disabled]="!PasswordForm.form.valid" (click)="canClick()" class="w-full">Submit</button>
         </div>
               <a class="no-underline mb-2" routerLink="../login"> Return To Login ?</a>
         </form>
