--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -3,7 +3,7 @@
             <mat-drawer mode="side"  opened>
                 <app-sidebar  class="sidebar" #sidebar [expand]=expand></app-sidebar>
             </mat-drawer>
-            <mat-drawer-content style="min-height: calc(100vh - 100px); overflow-y: hidden;" >
+            <mat-drawer-content style="min-height: calc(100vh - 200px); overflow-y: auto; overflow-x: hidden;" >
                 <app-header  (toggle)="toggle()"></app-header>
                 <router-outlet></router-outlet>
             </mat-drawer-content>
