--- a/src/app/admin/dashboard/dashboard.component.html
+++ b/src/app/admin/dashboard/dashboard.component.html
@@ -8,7 +8,7 @@
     </div>
 
     <!-- card design -->
-    <div class="min-h-screen bg-gray-100">
+    <div class="bg-gray-100">
       <div fxLayout="row wrap" fxLayoutGap="10px grid">
         <div fxFlex="24%" fxFlex.xs="100%" fxFlex.sm="50%" fxFlex.md="50%" *ngFor="let card of cardData">
           <div class="flex flex-wrap justify-between card-custom border ml-4 mr-4 mb-4 mt-4">
