--- a/src/app/admin/employees/employees.component.html
+++ b/src/app/admin/employees/employees.component.html
@@ -9,7 +9,7 @@
     </div>
 
     <!-- card design -->
-    <div class="min-h-screen bg-gray-100">
+    <div class="bg-gray-100">
       <mat-card class="p-6 bg-white px-2 mx-3 my-3 ">         
         <mat-card-title class="pl-3 text-gray-600 uppercase font-bold bg-blue-100 py-4 shadow-md mx-3  "> Add New Employee Master Data</mat-card-title>              
       <!-- <mat-divider class="mb-4" inset></mat-divider>         -->
