--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -61,15 +61,14 @@
 </mat-card>  
 </div> -->
 <!-- <div class="min-h-screen bg-blue-50"> -->
-          <div class="min-h-screen"
-              style="
-                background: linear-gradient(to right, #ee7724, #d8363a, #dd3675, #b44593);
-              "
+          <div 
+              class="gradient"
             >
              
 <section class="h-full gradient-form bg-gray-200 md:h-screen">
   <div class="py-12 px-6 h-full">
-    <div class="flex justify-center items-center flex-wrap h-full g-6 text-gray-800">
+    <div class="flex justify-center items-center3++
+     flex-wrap h-full g-6 text-gray-800">
       <!-- <div class="xl:w-10/12"> -->
         <div class="block bg-white shadow-lg rounded-lg">
           <div class="lg:flex lg:flex-wrap g-0">
@@ -103,19 +102,10 @@
                   </div>
                   <div class="text-center pt-1 mb-12 pb-1">
                     <button
-                      class="inline-block px-6 py-2.5 text-white font-medium text-xs leading-tight uppercase rounded shadow-md hover:bg-blue-700 hover:shadow-lg focus:shadow-lg focus:outline-none focus:ring-0 active:shadow-lg transition duration-150 ease-in-out w-full mb-3"
+                      class="inline-block px-6 py-2.5 text-white font-medium text-xs leading-tight uppercase rounded shadow-md hover:bg-blue-700 hover:shadow-lg focus:shadow-lg focus:outline-none focus:ring-0 active:shadow-lg transition duration-150 ease-in-out w-full mb-3 gradient"
                       type="button"
                       data-mdb-ripple="true"
                       data-mdb-ripple-color="light"
-                      style="
-                        background: linear-gradient(
-                          to right,
-                          #ee7724,
-                          #d8363a,
-                          #dd3675,
-                          #b44593
-                        );
-                      "
                     >
                       Log in
                     </button>
