--- a/src/app/layout/sidebar/sidebar.component.html
+++ b/src/app/layout/sidebar/sidebar.component.html
@@ -1,9 +1,9 @@
 
   
-<div class="side-nav-content"  [ngClass]="expand ? 'expand' : 'collapse'">
+<div class="side-nav-content bg-gray-100"  [ngClass]="expand ? 'expand' : 'collapse'">
     <div class="logo">
         <a href="/" class="logo-mini">
-          <img src="assets/images/logo.png" alt="logo of company"  *ngIf="expand"/> 
+          <img src="assets/images/logo2.png" alt="logo of company"  *ngIf="expand"/> 
         </a>
     </div>
     <img  src="assets/images/xlogo.png" alt="logo of company"  *ngIf="!expand"/>
