--- a/src/app/shared/components/emp-view/emp-view.component.scss
+++ b/src/app/shared/components/emp-view/emp-view.component.scss
@@ -8,3 +8,17 @@
   .mat-expansion-panel-body {
     padding: 0;
 }
+
+span i {
+  color: #dc3545;
+  font-size: 20px;
+  padding: 5px;
+}
+
+mat-accordion span {
+  padding: 5px 0;
+}
+
+.font span {
+  font-weight: 500;
+}
